updated code to affect the DOM rather than text alert

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+  <div class="container">
+    <h1>Rock Paper Scissors Evolved</h1>
+    <h3 id="description"></h3>
+    <button class="choiceButton" id="0">Rock</button>
+    <button class="choiceButton" id="1">Paper</button>
+    <button class="choiceButton" id="2">Scissors</button>
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
